# rustmc-server

./: .gitignore  Cargo.toml  LICENSE  README.md  eula.txt  index.html  justfile  server.properties
.github/workflows/: deploy-docs.yml  rust.yml
assets/: index-BYoDhGmu.js  index-CvaopaVt.css  index-D1ERnHJm.js  index-DvBEdN5n.css  index-DvFi8XQu.js  index-Uu7WFCqg.css  index-xqLeR59p.js
docs/: packet_ids.md
examples/: server.toml
plugin-bridge/: Cargo.toml
plugin-bridge/src/: events.rs  java_plugin.rs  jvm.rs  lib.rs  plugin.rs  scheduler.rs
plugin-bridge/tests/: test_jvm_initialization.rs  test_plugin_manager.rs  test_plugin_yml_parsing.rs
server/: Cargo.toml  build.rs
server/benches/: protocol_bench.rs
server/data/: block_states.json
server/data/registries/: dimension_type.json  enchantment.json  instrument.json  jukebox_song.json  wolf_variant.json
server/data/registries/v775/: banner_pattern.json  cat_sound_variant.json  cat_variant.json  chat_type.json  chicken_sound_variant.json  chicken_variant.json  cow_sound_variant.json  cow_variant.json  damage_type.json  dialog.json  dimension_type.json  enchantment.json  frog_variant.json  instrument.json  jukebox_song.json  painting_variant.json  pig_sound_variant.json  pig_variant.json  tags.json  test_environment.json  test_instance.json  timeline.json  trim_material.json  trim_pattern.json  wolf_sound_variant.json  wolf_variant.json  world_clock.json  worldgen_biome.json  zombie_nautilus_variant.json
server/examples/: simulate_client.rs
server/src/: config.rs  lib.rs  main.rs  server_config.rs  uuid_resolver.rs
server/src/commands/: mod.rs
server/src/network/: broadcast.rs  connection.rs  mod.rs  server.rs  transfer_token.rs
server/src/protocol/: chunk_data.rs  configuration.rs  handshake.rs  login.rs  mod.rs  nbt.rs  packet.rs  packet_ids.rs  play.rs  status.rs  types.rs  version.rs
server/src/registry/: error.rs  loader.rs  mod.rs  nbt_encoder.rs
server/src/world/: block_registry.rs  chunk.rs  item_registry.rs  mod.rs  persistence.rs
server/tests/: integration_test.rs  protocol_flow.rs  registry_validation.rs  transfer_auth_test.rs  transfer_flow.rs  validate_packet_ids.rs
server/tests/common/: client.rs  login_flow.rs  mod.rs  retry.rs  server.rs
server/tests/data/: vanilla_registry_data.json  vanilla_registry_order.json
server/tests/manual/: CONFIGURATION_PHASE_VERIFICATION.md
server/tests/server_tests/: main.rs  protocol_flow.rs  transfer_auth_test.rs  transfer_flow.rs
server/tests/server_tests/common/: client.rs  server.rs
server/tests/tools/: capture_vanilla_registries.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tools/: download_server_jar.sh  generate_block_states.sh  regenerate_block_states.sh  regenerate_registries.py  validate_packet_ids.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  i18n.ts  index.css
web/src/components/: ConfigGenerator.tsx  PacketReference.tsx
web/src/data/: configOptions.ts  packets.ts
web/src/locales/: en.json  es.json
world/: level.dat_old
world/dimensions/minecraft/overworld/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
