[workspace]
members = ["server", "plugin-bridge", "test-utils"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam = "0.8"
uuid = { version = "1.11", features = ["v4"] }
bytes = "1.9"
rand = "0.8"
proptest = "1.6"
criterion = "0.5"
flate2 = "1.0"
