[workspace]
members = ["server", "plugin-bridge", "test-utils"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam = "0.8"
uuid = { version = "1.11", features = ["v4"] }
bytes = "1.9"
rand = "0.8"
proptest = "1.6"
criterion = "0.5"
flate2 = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_yaml = "0.9"
