[package]
name = "plugin-bridge"
version = "0.1.0"
edition = "2021"
description = "Paper plugin compatibility layer via JNI bridge"
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
crossbeam = { workspace = true }
uuid = { workspace = true }
