[package]
name = "rustmc-server"
version = "0.1.0"
edition = "2021"
description = "A multi-threaded Rust Minecraft server with Paper plugin compatibility"
license = "MIT"

[lib]
name = "rustmc_server"
path = "src/lib.rs"

[[bin]]
name = "rustmc-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
plugin-bridge = { path = "../plugin-bridge" }
flate2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
criterion = { workspace = true }
rustmc-test-utils = { path = "../test-utils" }

[[test]]
name = "capture_vanilla_registries"
path = "tests/tools/capture_vanilla_registries.rs"

[[bench]]
name = "protocol_bench"
harness = false
