[package]
name = "rustmc-server"
version = "0.1.0"
edition = "2021"
description = "A multi-threaded Rust Minecraft server with Paper plugin compatibility"
license = "MIT"

[lib]
name = "rustmc_server"
path = "src/lib.rs"

[[bin]]
name = "rustmc-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
plugin-bridge = { path = "../plugin-bridge" }
flate2 = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
redb = { workspace = true }
bincode = { workspace = true }
lru = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
reqwest = { workspace = true }
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
phf_codegen = "0.11"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.14"
rustmc-test-utils = { path = "../test-utils" }
serial_test = "3"
hex = "0.4"

[[test]]
name = "capture_vanilla_registries"
path = "tests/tools/capture_vanilla_registries.rs"

[[bench]]
name = "protocol_bench"
harness = false
